# freshmart

./: base_tables.sql  docker-compose.yml  mz_queries.sql  setup_database.sh
backend/: Dockerfile  pyproject.toml
backend/app/: agent.py  database.py  main.py
backend/app/database/: __init__.py  background.py  collectors.py  config.py  error_handling.py  exceptions.py  managers.py  materialize.py  metrics.py  models.py  pools.py  queries.py  stats.py
frontend/src/: App.jsx
