[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freshmart-backend"
version = "0.1.0"
description = "FreshMart Evolution Backend API"
authors = [
    {name = "FreshMart Team"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.24.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "strands-agents[openai]>=1.0.1",
    "strands-agents-tools>=0.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
